correction map iss, we can zoom in, correction z-index for navbar and imgotdbutton + minor animation correction

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -420,30 +420,12 @@ h1{
 
 /*  ---> ISS PAGE */
 
-#issBackground {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(./assets/ISS-wallpaper.jpg);
-  background-attachment: fixed;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  background-size: cover;
-  height: 100vh;
-  width: 100%;
-}
-
-#map_container{
-  position: absolute;
-  width: 70%;
-  left: 15%;
-  right: 15%;
-  top: 20%;
-  transition: 350ms;
-}
-
 #map{
   position: absolute;
   width: 100%;
   top: 0;
+  z-index: 1;
+  height: 100vh;
   bottom: 0;
   
 }
@@ -475,7 +457,7 @@ h1{
   right: 0;
   margin-right: 6%;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   height: 10%;
   width: 40%;
   transition: 350ms;
@@ -604,7 +586,8 @@ h1{
   border: 1px solid rgba(255, 255, 255, 0.5);
   padding-right: 1.5%;
   padding-left: 2%;
-  left: 1.5%;
+  left: 0;
+  
 }
 
 #img_otd_title{
@@ -620,6 +603,7 @@ h1{
 
 #up_down_arrow{
   position: absolute;
+  z-index: 2;
   height: 8px;
   opacity: 0.5;
   bottom: 0;
